--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ---
 ---
 
+<!--Header-->
 {% include header.html %}
-
+<!--Header-->
 
 <body>
-
-		
 
 <!--Navigation Bar-->
 {% include nav_bar.html %}
