--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -39,7 +39,7 @@
             You can find most of the theorical work I have done 
             on my <span class="highlightme">Github repository</span> <a href="https://github.com/BerengerQueune/Wild_Code_School">here</a> 
             and my school certificate  <a href="https://drive.google.com/file/d/1GhWx-oAKANAbk_Mpwz0BsruyjcctO4M1/view">here</a>.
-            Finally, in February at the end of the training, my classmates voted for me as <a href="https://www.linkedin.com/posts/wild-code-school_wilders-of-the-month-activity-6899639599761645569-fBG6">"Wilder of the month"</a> which is similar to an "Employee of the month" award.
+            Finally, in February at the end of the training, my classmates voted for me as "<a href="https://www.linkedin.com/posts/wild-code-school_wilders-of-the-month-activity-6899639599761645569-fBG6">Wilder of the month</a>" which is similar to an "Employee of the month" award.
             
 
             
