--- a/testing.html
+++ b/testing.html
@@ -15,6 +15,9 @@
 
 <body>
 
+<h5>Hi, I'm Bérenger</h5>
+<p id="about_me"></p>
+
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 <!--Navigation Bar-->
@@ -24,7 +27,7 @@
     <img src="images/cloud_nav_bar.png"/>
     <div class="nav_container">
     <div class="profile">
-        <h1><a href="index.html">Home</a></h1>
+        <h1><a href="testing.html">Home</a></h1>
     </div>
 
     <ul>
@@ -55,9 +58,9 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
+
+
 <div class="presentation_area">
-    <p id="about_me"></p>
-	<h1>Hi, I'm Bérenger</h1>
     <div class="box">
         <img src="images/current_best.png" alt="profile photo" />
 
@@ -71,22 +74,21 @@
     </div>
 
 </div>
-
-
-
-
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-<!--Presentation div-->
-
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
-<!--Project area div-->
 <p id="my_projects"></p>
+
+
+
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+<!--Presentation div-->
+
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
+<!--Project area div-->
 		<section class="page-content">
 
             
