--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         <img src="images/current_best.png" alt="profile photo" />
 
         <p><br><br>
-            I am a Data Analyst.
+            I am a Junior Data Engineer.
             <br><br>
-            I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
+            After a 5 months Data Analyst training at Wild Code School, I have started a Data Engineer training in Jedha Bootcamp in February. 
+            I am currently studying to obtain a "Concepteur-développeur en Science des Données" diploma.
         </p>
 
 
