--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <p><br><br>
             I am a Junior Data Engineer.
             <br><br>
-            After a 5 months Data Analyst training at Wild Code School, I have started a Data Engineer training in Jedha Bootcamp in February. 
-            I am currently studying to obtain a "Concepteur-développeur en Science des Données" diploma.
+            After a 5 months Data Analyst training at Wild Code School, I have started a Data Engineer training at Jedha Bootcamp from February 2022 to July 2022. 
+            I am currently studying to obtain a diploma named "Concepteur-développeur en Science des Données".
         </p>
 
 
