--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <p><br><br>
             I am a Junior Data Engineer.
             <br><br>
-            After a 5 months Data Analyst training at Wild Code School, I have started a Data Engineer training at Jedha Bootcamp from February 2022 to July 2022. 
-            I am currently studying to obtain a diploma named "Concepteur-développeur en Science des Données".
+            I am currently studying to obtain a diploma named "Concepteur-développeur en Science des Données" in July.
         </p>
 
 
