--- a/tableau_project.html
+++ b/tableau_project.html
@@ -23,7 +23,7 @@
 
 <div class="project_area">
 
-	<h1>Mockup project: Dashboard on Tableau from SQL Query</h1>
+	<h1>Dashboard on Tableau from SQL queries</h1>
     <div class="box">
 
         <p><br><br>
