--- a/testing.html
+++ b/testing.html
@@ -89,6 +89,7 @@
 <!--Project area div-->
 <!--Project area div-->
 <!--Project area div-->
+<p id="my_projects"></p>
 		<section class="page-content">
 
             
@@ -100,9 +101,9 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('tableau_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
-                                <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
+                                <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
                                 <p>This was my first data project. I used SQL to query data from a "Toys and models" 
@@ -111,7 +112,7 @@
 					</div>
 
                     <!--Card 2-->
-					<div class = "project" onclick="window.open('movie_recommendation_project.html','mywindow');" style="cursor: pointer;">
+					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Movie recommendation system</h4>
                         </div>
@@ -121,7 +122,7 @@
 					</div>
 
                     <!--Card 3-->
-                    <div class = "project" onclick="window.open('music_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Determine music track popularity</h4>
                         </div>
@@ -130,9 +131,17 @@
                         </div>
 					</div>
 
+                </div>
+
+
+
+
+
+
+                <div class="projects">
 
                     <!--Card 4-->
-                    <div class = "project" onclick="window.open('digitecpharma_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
@@ -141,13 +150,8 @@
                         </div>
 					</div>
 
-
-
-				</div>
-
-                <div class="projects">
                     <!--Card 5-->
-                    <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
@@ -157,7 +161,7 @@
                     </div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
@@ -175,7 +179,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Future project at Jedha Bootcamp</h4>
                             </div>
