--- a/tableau_project.html
+++ b/tableau_project.html
@@ -27,10 +27,10 @@
     <div class="box">
 
         <p><br><br>
-            This was my first Data project. I did it a week after the beginning of my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time">Data Analyst Training</a>.
-            The Wild Code School gave me access to a <span class="highlightme">SQL</span> database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42">4 SQL queries</a>.
+            This was my first Data project. I did it a week after the beginning of my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>.
+            The Wild Code School gave me access to a <span class="highlightme">SQL</span> database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42" target="_blank">4 SQL queries</a>.
             <br><br>
-            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir">here</a>. The excentric art style was part of our story telling.
+            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir" target="_blank">here</a>. The excentric art style was part of our story telling.
         </p>
 
 
