--- a/digitecpharma_project.html
+++ b/digitecpharma_project.html
@@ -27,14 +27,14 @@
     <div class="box">
 
         <p><br><br>
-            <a href="https://www.digitecpharma.fr/">Digitecpharma</a> is a company helping pharmacies to digitalize their stock, data and developp their online presence.
+            <a href="https://www.digitecpharma.fr/" target="_blank">Digitecpharma</a> is a company helping pharmacies to digitalize their stock, data and developp their online presence.
             They wanted multiple dashboards on <span class="highlightme">Metabase</span> to easily access all of their business data. 
             <br><br>
             We made <span class="highlightme">9 dashboards</span> and <span class="highlightme">162 SQL queries</span>. 
             This project had a 2 months lifespan including multiple meetings with a lot of back and forth to gather feedbacks and share ideas with Digitecpharma.
             I focused my work on the technical side by learning Metabase and doing SQL queries as well as gathering feedback from the customer. 
             This project was highly collaborative, both within our team and with Digitecpharma.
-            We presented our work during a demoday at the Wild Code School and you can find it <a href="https://www.loom.com/share/836105de6a9843e593a6f6fd3d4915bd">here</a>.
+            We presented our work during a demoday at the Wild Code School and you can find it <a href="https://www.loom.com/share/836105de6a9843e593a6f6fd3d4915bd" target="_blank">here</a>.
         </p>
 
 
