--- a/tableau_project.html
+++ b/tableau_project.html
@@ -26,9 +26,11 @@
 	<h1>Dashboard on Tableau from SQL queries</h1>
     <div class="box">
 
-        <p><br><br>
-            This was my first Data project. I did it a week after the beginning of my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>.
-            The Wild Code School gave me access to a <span class="highlightme">SQL</span> database called "Toys and Models". I used MySQL Workbench to write <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42" target="_blank">4 SQL queries</a>.
+        <p>
+            <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42" target="_blank">Link to Github gist</a>
+            <br><br>
+            This was my very first Data project done a week after starting my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>.
+            I used MySQL Workbench to write 4 <span class="highlightme">SQL</span> queries.
             <br><br>
             The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir" target="_blank">here</a>. The excentric art style was part of our story telling.
         </p>
