--- a/tableau_project.html
+++ b/tableau_project.html
@@ -29,6 +29,8 @@
         <p>
             <br><br>
             <a href="https://gist.github.com/BerengerQueune/cfa7b160ea88d72179560647fe60be42" target="_blank">Link to Github gist</a>
+            <br>
+            Tech stack: <span class="highlightme">SQL</span>, <span class="highlightme">Tableau Software</span>
             <br><br>
             This was my very first Data project done a week after starting my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>.
             I used MySQL Workbench to write 4 <span class="highlightme">SQL</span> queries.
