--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="presentation_area">
 
     <div class="box">
-        <img src="images/current_best.png" alt="profile photo" />
+        <img src="images/test5.jpg" alt="profile photo" />
 
         <p><br><br>
             I am a Junior Data Engineer.
