--- a/testing.html
+++ b/testing.html
@@ -62,7 +62,7 @@
 
 <div class="presentation_area">
     <div class="box">
-        <img src="images/current_best.png" alt="profile photo" />
+        <img src="images/Berenger_no_background.png" alt="profile photo" />
 
         <p><br><br>
             I am a Data Analyst.
