--- a/music_project.html
+++ b/music_project.html
@@ -26,20 +26,26 @@
 	<h1>Determine music track popularity</h1>
     <div class="box">
 
-        <p><br><br>
-            During a <span class="highlightme">2 days hackaton</span> with a team of 5 we had to developp a <span class="highlightme">webapp</span> useful for professionals of the music industry. We were free to find our own concept as long as we were using the Spotify Database. 
+        <p>
             <br><br>
-            After a team brainstorming we picked my concept of modifying music metrics such as danceability, genre, liveness and many others then use Machine Learning to determine if the track will be popular so music productors could use and experiment with our app to shape their own popular music.
-            My work consisted of using <span class="highlightme">Python</span> to build the Machine Learning Model and after many trials, I found the <span class="highlightme">RandomForest Classifier</span> model to be the most efficient. 
-            I also wrote a part of our <span class="highlightme">Streamlit</span> code. Our <span class="highlightme">Github</span> is available <a href="https://github.com/GuillaumeArp/Hackathon_Wild_1" target="_blank">here</a> and our Streamlit app is <a href="https://data-yoyo.herokuapp.com/" target="_blank">here</a>. 
-            I made an oral presentation of our project to <span class="highlightme">hundreds of alumnis</span>. This hackaton was a competition between around 24 Data teams and our project reached the finals. 
-            After we published it on Linkedin, we were contacted by the team at Streamlit who <span class="highlightme">congratulated us</span> and sent us goodies as well as <a href="https://discuss.streamlit.io/t/weekly-roundup-supply-chain-dashboards-gpt-3-for-seo-building-personal-webpages-and-more/19668" target="_blank">highlighted</a> our work on their own website.
+            <a href="https://github.com/GuillaumeArp/Hackathon_Wild_1" target="_blank">Link to Github repository</a>
+            <br>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">RandomForest Classifier</span>
+            <br><br>
+            As a team of 5, during a <span class="highlightme">2 days hackaton</span>, using a Spotify Database, we developped a <span class="highlightme">webapp</span> for professionals of the music industry. We were free to find our own concept.
+            <br><br>
+            After a team brainstorming we picked my concept of modifying music metrics such as danceability, genre, liveness and many others to predict if the track was going to be popular. Music productors could use and experiment with our app to find out what works best for them.
+            My work consisted of using <span class="highlightme">Python</span> to build the Machine Learning Model and integrate it within Streamlit. After many trials, I found the <span class="highlightme">RandomForest Classifier</span> model to be the most efficient.
+            Our Streamlit app is <a href="https://data-yoyo.herokuapp.com/" target="_blank">here</a>. 
+            I made an oral presentation of our project to <span class="highlightme">hundreds of alumnis</span>. This hackaton was a competition between 24 Data teams and our project reached the finals. 
+            After we published our app on Linkedin, we were contacted by a Streamlit employee who <span class="highlightme">congratulated us</span>, sent us goodies and <a href="https://discuss.streamlit.io/t/weekly-roundup-supply-chain-dashboards-gpt-3-for-seo-building-personal-webpages-and-more/19668" target="_blank">highlighted</a> our work on their own website.
         </p>
 
 
     </div>
 
 </div>
+
 
 <!--Project area div-->
 {% include projects_area.html %}
