--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -26,7 +26,12 @@
 	<h1>Courses received at Wild Code School</h1>
     <div class="box">
 
-        <p><br><br>
+        <p>
+            <br><br>
+            <a href="https://github.com/BerengerQueune/Wild_Code_School" target="_blank">Link to Github repository</a>
+            <br>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">RandomForest Classifier</span>
+            <br><br>
             I studied the following topics during this <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>:<br><br>         
             - Python and libraries such as Numpy, Pandas, Streamlit<br>
             - Matplotlib, Seaborn, Plotly<br>
@@ -36,9 +41,7 @@
             - Machine Learning with Sickit-learn<br><br>
             
             I also followed many Live coding sessions, masterclasses and coding dojo. 
-            You can find most of the theorical work I have done 
-            on my <span class="highlightme">Github repository</span> <a href="https://github.com/BerengerQueune/Wild_Code_School" target="_blank">here</a> 
-            and my school certificate  <a href="https://drive.google.com/file/d/1GhWx-oAKANAbk_Mpwz0BsruyjcctO4M1/view" target="_blank">here</a>.
+            You can see my school certificate  <a href="https://drive.google.com/file/d/1GhWx-oAKANAbk_Mpwz0BsruyjcctO4M1/view" target="_blank">here</a>.
             Finally, in February at the end of the training, my classmates voted for me as "<a href="https://www.linkedin.com/posts/wild-code-school_wilders-of-the-month-activity-6899639599761645569-fBG6" target="_blank">Wilder of the month</a>" which is similar to an "Employee of the month" award.
             
 
