--- a/wild_code_school_project.html
+++ b/wild_code_school_project.html
@@ -33,8 +33,7 @@
             Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">RandomForest Classifier</span>
             <br><br>
             I studied the following topics during this <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>:<br><br>         
-            - Python and libraries such as Numpy, Pandas, Streamlit<br>
-            - Matplotlib, Seaborn, Plotly<br>
+            - Python and libraries such as Numpy, Pandas, Streamlit, Matplotlib, Seaborn, Plotly<br>
             - SQL, MongoDB<br>
             - JSON<br>
             - Tableau, Power BI, Metabase, Dataiku<br>
