--- a/digitecpharma_project.html
+++ b/digitecpharma_project.html
@@ -28,6 +28,8 @@
 
         <p>
             <br><br>
+            A confidentiality clause was signed for this project. We cannot show our work.
+            <br>
             Tech stack: <span class="highlightme">Metabase</span>, <span class="highlightme">SQL</span>
             <br><br>
             <a href="https://www.digitecpharma.fr/" target="_blank">Digitecpharma</a> is a company helping pharmacies to digitalize their stock, data and developp their online presence.
