--- a/testing.html
+++ b/testing.html
@@ -106,8 +106,7 @@
                                 <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
-                                <p>This was my first data project. I used SQL to query data from a "Toys and models" 
-                                    database to realize a dashboard with Tableau software.</p>
+                                <img src="images/bloc-2-Card.jpg" alt="profile photo" />
                             </div>
 					</div>
 
