--- a/testing.html
+++ b/testing.html
@@ -106,7 +106,7 @@
                                 <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
-                                <img src="images/bloc-2-Card.jpg" alt="profile photo" />
+                                <img src="images/bloc-1-Card.png" alt="profile photo" />
                             </div>
 					</div>
 
