--- a/bloc-1.html
+++ b/bloc-1.html
@@ -23,14 +23,14 @@
 
 <div class="project_area">
 
-	<h1>ManoMano: raise customer's engagement</h1>
+	<h1>Construction and supply of a data infrastructure</h1>
     <div class="box">
 
         <p>
             <br><br>
-            Tech stack: <span class="highlightme">Power BI</span>, <span class="highlightme">Python</span>, <span class="highlightme">Sentiment Analysis</span>, <span class="highlightme">Photoshop</span>
-            <br><br>
-            During a <span class="highlightme">3 days hackaton</span>. A competition gathered <span class="highlightme">24 Data teams</span> to analyse a Database given by <a href="https://www.manomano.fr/" target="_blank">ManoMano</a> in order to find their customer's pain points while purchasing on the website. We also had to make suggestion to improve their customer's experience.
+            <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-1-Construction-et-alimentation-d'une-infrastructure-de-gestion-de-donnees" target="_blank">Link to Github repository</a>
+            <br>
+            Tech stack: <span class="highlightme">AWS S3</span>, <span class="highlightme">AWS Redshift</span>, <span class="highlightme">Scraping</span>, <span class="highlightme">API requests</span>, <span class="highlightme">Python</span>, <span class="highlightme">SQL</span>, <span class="highlightme">Plotly</span>
             <br><br>
             We analyzed the Database with <span class="highlightme">Power BI</span> then I used a <span class="highlightme">Python</span> library called Text2Emotion in order to identify customer's feelings based on their comments. I also used <span class="highlightme">photoshop</span> to design some of the visuals used in our presentation. 
             We went to the finals where I made an oral presentation of our work to hundreds of alumnis and Data professionals from ManoMano. 
