--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p><br><br>
             I am a Junior Data Engineer.
             <br><br>
-            I am currently studying to obtain a diploma named "Concepteur-développeur en Science des Données" in July.
+            I am currently studying to obtain a "Concepteur-développeur en Science des Données" diploma in July.
         </p>
 
 
