--- a/bloc-2.html
+++ b/bloc-2.html
@@ -32,7 +32,7 @@
             <br>
             Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Pandas</span>, <span class="highlightme">Plotly</span>
             <br><br>
-            The goal was to <span class="highlightme"></span>analyze</span> data about Speed Dating to find the most influencial traits to have a second date. This is a <span class="highlightme"></span>Kaggle competition</span> available <a href="https://www.kaggle.com/datasets/annavictoria/speed-dating-experiment" target="_blank">here</a>. Once the exploratory analysis was finished. I made many visualizations and used statistics to find the correlation between each participants traits and the obtention of a second date.
+            The goal was to <span class="highlightme"></span>analyze</span> data about Speed Dating to find the most influencial traits to have a second date. This is a <span class="highlightme">Kaggle competition</span> available <a href="https://www.kaggle.com/datasets/annavictoria/speed-dating-experiment" target="_blank">here</a>. Once the exploratory analysis was finished. I made many visualizations and used statistics to find the correlation between each participants traits and the obtention of a second date.
             <br><br>
             You can see a video of my presentation <a href="https://share.vidyard.com/watch/UdfgrURqCaFM1kTKZZRUXE?" target="_blank">here</a>.
                     
