--- a/bloc-3.html
+++ b/bloc-3.html
@@ -32,9 +32,9 @@
             <br>
             Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Sklearn</span>, <span class="highlightme">GridSearchCV</span>
             <br><br>
-            From a list of the 35 most touristic French cities, I Made <span class="highlightme">API requests</span> to gather their weather data and GPS coordinate. Once done, I scrapped data from <span class="highlightme">Booking.com</span> to find the 20 most popular hotels for each cities. I then saved all these information in a CSV file and stored it in a <span class="highlightme">Amazon S3 Datalake</span>. After that, I have extracted and modified the Data to save it in a <span class="highlightme">PostgreSQL Redshift Datawarehouse</span>. Finally, I made SQL queries to request the data and create a visualisation on a map.
+            For this project, I had to make an exploratory analysis before <span class="highlightme">preprocessing</span> the data to prepare them for a <span class="highlightme">Linear Regression model</span> to predict the weekly sales of Walmart stores.
             <br><br>
-            You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>.
+            <!-- You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>. -->
             
             
         </p>
