--- a/bloc-4.html
+++ b/bloc-4.html
@@ -23,18 +23,18 @@
 
 <div class="project_area">
 
-	<h1>Construction and supply of a data infrastructure</h1>
+	<h1>Predictive analysis of sentiment on tweets with Deep Learning</h1>
     <div class="box">
 
         <p>
             <br><br>
-            <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-1-Construction-et-alimentation-d'une-infrastructure-de-gestion-de-donnees" target="_blank">Link to Github repository</a>
+            <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-4-Analyse-predictive-de-donnees-non-structurees-par-l'intelligence-artificielle" target="_blank">Link to Github repository</a>
             <br>
-            Tech stack: <span class="highlightme">AWS S3 DataLake</span>, <span class="highlightme">AWS Redshift DataWarehouse</span>, <span class="highlightme">Scraping - Scrapy and beautifoul soup</span>, <span class="highlightme">API requests</span>, <span class="highlightme">Python</span>, <span class="highlightme">SQL</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">SQL Alchemy</span>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Tensorflow</span>, <span class="highlightme">Spacy</span>
             <br><br>
-            From a list of the 35 most touristic French cities, I Made <span class="highlightme">API requests</span> to gather their weather data and GPS coordinate. Once done, I scrapped data from <span class="highlightme">Booking.com</span> to find the 20 most popular hotels for each cities. I then saved all these information in a CSV file and stored it in a <span class="highlightme">Amazon S3 Datalake</span>. After that, I have extracted and modified the Data to save it in a <span class="highlightme">PostgreSQL Redshift Datawarehouse</span>. Finally, I made SQL queries to request the data and create a visualisation on a map.
+            After cleaning my text data by using Natural Language Processing methods, I used Tensorflow to make a Deep Learning model in order to predict if a tweet is about a disaster or not. This is a <span class="highlightme">Kaggle competition</span> available <a href="https://www.kaggle.com/competitions/nlp-getting-started" target="_blank">here</a>.
             <br><br>
-            You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>.
+            <!-- You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>. -->
             
             
         </p>
