--- a/bloc-3.html
+++ b/bloc-3.html
@@ -23,7 +23,7 @@
 
 <div class="project_area">
 
-	<h1>Predictive analysis of Walmart weekly sales with Machine Learning</h1>
+	<h1>Predictive analysis with Machine Learning</h1>
     <div class="box">
 
         <p>
