--- a/bloc-4.html
+++ b/bloc-4.html
@@ -23,7 +23,7 @@
 
 <div class="project_area">
 
-	<h1>Predictive analysis of sentiment on tweets with Deep Learning</h1>
+	<h1>Predictive analysis of sentiment with Deep Learning</h1>
     <div class="box">
 
         <p>
