--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         <img src="images/test5.jpg" alt="profile photo" />
 
         <p><br><br>
-            I am a Junior Data Engineer.
-            <br><br>
-            I am currently studying to obtain a "Concepteur-développeur en Science des Données" diploma in July.
+            I am a Junior Data Engineer currently studying to obtain a "Concepteur-développeur en Science des Données" diploma in July.
         </p>
 
 
