--- a/testing.html
+++ b/testing.html
@@ -24,7 +24,7 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 <nav>
-    <img src="images/cloud_nav_bar.png"/>
+    <img src="images/cloud_nav_bar_blue.png"/>
     <div class="nav_container">
     <div class="profile">
         <h1><a href="testing.html">Home</a></h1>
