--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="images/test5.jpg" alt="profile photo" />
 
         <p><br><br>
-            I am a Junior Data Engineer currently studying to obtain a "Concepteur-développeur en Science des Données" diploma in July.
+            Currently a student in Data Analysis, Engineering and Science. I will finish my diploma "Concepteur-développeur en Science des données" in July. This will be followed by an AWS Solution Architect associate certification in August.
         </p>
 
 
