--- a/bloc-6.html
+++ b/bloc-6.html
@@ -23,7 +23,7 @@
 
 <div class="project_area">
 
-	<h1>Data Management</h1>
+	<h1>API - Data Visualisation online</h1>
     <div class="box">
 
         <p>
