--- a/bloc-6.html
+++ b/bloc-6.html
@@ -32,8 +32,7 @@
             <br>
             Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">Docker</span>, <span class="highlightme">AWS Elastic Beanstalk</span>, <span class="highlightme">Fast F1</span>, <span class="highlightme">Plotly</span>, , <span class="highlightme">Matplotlib</span>
             <br><br>
-            This was a group project. I focused my work on the deployment phase. I made our <a href="https://f1-insights-jedha.herokuapp.com/" target="_blank">web application</a> with Streamlit to deploy it on Heroku for testing purpose and AWS Elastic Beanstalk for our <a href="https://youtu.be/PH8XaK99Smc?t=4514" target="_blank">presentation</a>.    
-            The idea for this project is to gather data related to Formula One from an API to propose various visualizations to the user.
+            This was a group project. Our goal was to gather data related to Formula One from an API to propose various visualizations to the user I focused my work on the deployment phase. I made our <a href="https://f1-insights-jedha.herokuapp.com/" target="_blank">web application</a> with Streamlit to deploy it on Heroku for testing purpose and AWS Elastic Beanstalk for our <a href="https://youtu.be/PH8XaK99Smc?t=4514" target="_blank">presentation</a>.
             <br><br>
             <!-- You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>. -->
                
