--- a/bloc-6.html
+++ b/bloc-6.html
@@ -30,7 +30,7 @@
             <br><br>
             <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-6-Direction-de-projets-de-gestion-de-donnees" target="_blank">Link to Github repository</a>
             <br>
-            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">Docker</span>, <span class="highlightme">AWS Elastic Beanstalk</span>, <span class="highlightme">Fast F1</span>, <span class="highlightme">Plotly</span>, , <span class="highlightme">Matplotlib</span>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">Docker</span>, <span class="highlightme">AWS Elastic Beanstalk</span>, <span class="highlightme">Fast F1</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Matplotlib</span>
             <br><br>
             This was a group project. Our goal was to gather data related to Formula One from an API to propose various visualizations to fans. I focused my work on the deployment phase. I made our <a href="https://f1-insights-jedha.herokuapp.com/" target="_blank">web application</a> with Streamlit and Docker to deploy it on Heroku for testing then on AWS Elastic Beanstalk for our <a href="https://youtu.be/PH8XaK99Smc?t=4514" target="_blank">presentation</a>.
             <br><br>
