--- a/bloc-3.html
+++ b/bloc-3.html
@@ -30,9 +30,9 @@
             <br><br>
             <a href="https://github.com/BerengerQueune/Concepteur-developpeur-en-science-des-donnees/tree/main/Bloc-3-Analyse-predictive-de-donnees-structurees-par-l'intelligence-artificielle" target="_blank">Link to Github repository</a>
             <br>
-            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Sklearn</span>, <span class="highlightme">GridSearchCV</span>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Sklearn</span>, <span class="highlightme">GridSearchCV</span>, <span class="highlightme">Linear Regression</span>
             <br><br>
-            For this project, I had to make an exploratory analysis before <span class="highlightme">preprocessing</span> the data to prepare them for a <span class="highlightme">Linear Regression model</span> to predict the weekly sales of Walmart stores.
+            For this project, I had to make an exploratory analysis before preprocessing the data to prepare them for a Linear Regression model to predict the weekly sales of Walmart stores.
             <br><br>
             <!-- You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>. -->
             
