--- a/digitecpharma_project.html
+++ b/digitecpharma_project.html
@@ -28,12 +28,12 @@
 
         <p>
             <br><br>
-            A confidentiality clause was signed for this project. We cannot show our work.
+            Github repository unavailable: a confidentiality clause was signed for this project.
             <br>
             Tech stack: <span class="highlightme">Metabase</span>, <span class="highlightme">SQL</span>
             <br><br>
             <a href="https://www.digitecpharma.fr/" target="_blank">Digitecpharma</a> is a company helping pharmacies to digitalize their stock, data and developp their online presence.
-            They wanted multiple dashboards on <span class="highlightme">Metabase</span> to easily access all of their business data. 
+            They wanted multiple dashboards on Metabase to easily access all of their business data. 
             <br><br>
             We made <span class="highlightme">9 dashboards</span> and <span class="highlightme">162 SQL queries</span>. 
             This project had a 2 months lifespan including multiple meetings with a lot of back and forth to gather feedbacks and share ideas with Digitecpharma.
