--- a/manomano_project.html
+++ b/manomano_project.html
@@ -28,11 +28,11 @@
 
         <p>
             <br><br>
-            Tech stack: <span class="highlightme">Power BI</span>, <span class="highlightme">Python</span>, <span class="highlightme">Sentiment Analysis</span>, <span class="highlightme">Photoshop</span>
+            Tech stack: <span class="highlightme">Power BI</span>, <span class="highlightme">Python</span>, <span class="highlightme">Sentiment Analysis with Text2Emotion</span>, <span class="highlightme">Photoshop</span>
             <br><br>
             During a <span class="highlightme">3 days hackaton</span>. A competition gathered <span class="highlightme">24 Data teams</span> to analyse a Database given by <a href="https://www.manomano.fr/" target="_blank">ManoMano</a> in order to find their customer's pain points while purchasing on the website. We also had to make suggestion to improve their customer's experience.
             <br><br>
-            We analyzed the Database with <span class="highlightme">Power BI</span> then I used a <span class="highlightme">Python</span> library called Text2Emotion in order to identify customer's feelings based on their comments. I also used <span class="highlightme">photoshop</span> to design some of the visuals used in our presentation. 
+            We analyzed the Database with Power BI then I used a Python  library called Text2Emotion in order to identify customer's feelings based on their comments. I also used photoshop to design some of the visuals used in our presentation. 
             We went to the finals where I made an oral presentation of our work to hundreds of alumnis and Data professionals from ManoMano. 
             Our team finished on the podium at the <span class="highlightme">third place</span>. You can find a mockup of my presentation <a href="       https://github.com/BerengerQueune/BerengerQueune.github.io/blob/main/README.md" target="_blank">Here</a>.
                         
