--- a/music_project.html
+++ b/music_project.html
@@ -35,7 +35,7 @@
             As a team of 5, during a <span class="highlightme">2 days hackaton</span>, using a Spotify Database, we developped a <span class="highlightme">webapp</span> for professionals of the music industry. We were free to find our own concept.
             <br><br>
             After a team brainstorming we picked my concept of modifying music metrics such as danceability, genre, liveness and many others to predict if the track was going to be popular. Music productors could use and experiment with our app to find out what works best for them.
-            My work consisted of using <span class="highlightme">Python</span> to build the Machine Learning Model and integrate it within Streamlit. After many trials, I found the <span class="highlightme">RandomForest Classifier</span> model to be the most efficient.
+            My work consisted of using Python to build the Machine Learning Model and integrate it within Streamlit. After many trials, I found the RandomForest Classifier model to be the most efficient.
             Our Streamlit app is <a href="https://data-yoyo.herokuapp.com/" target="_blank">here</a>. 
             I made an oral presentation of our project to <span class="highlightme">hundreds of alumnis</span>. This hackaton was a competition between 24 Data teams and our project reached the finals. 
             After we published our app on Linkedin, we were contacted by a Streamlit employee who <span class="highlightme">congratulated us</span>, sent us goodies and <a href="https://discuss.streamlit.io/t/weekly-roundup-supply-chain-dashboards-gpt-3-for-seo-building-personal-webpages-and-more/19668" target="_blank">highlighted</a> our work on their own website.
