--- a/movie_recommendation_project.html
+++ b/movie_recommendation_project.html
@@ -30,11 +30,11 @@
             <br><br>
             <a href="https://github.com/BerengerQueune/Movie_recommendation_system" target="_blank">Link to Github repository</a>
             <br>
-            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Pandas</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">KNN Machine Learning</span>
+            Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Pandas</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Streamlit</span>, <span class="highlightme">K-nearest neighbors</span>
             <br><br>
             As a team of 4 we had to developp a <span class="highlightme">webapp</span> for a cinema owner. This app was a movie recommendation system to suggest potential future popular movies.
             <br><br>
-            We started to clean then analyze the database using <span class="highlightme">Python</span>, <span class="highlightme">Pandas</span> and <span class="highlightme">Plotly</span> then I built the app with a Python library named <span class="highlightme">Streamlit</span>. Based on the massive IMDb database I trained a <span class="highlightme">KNN Machine Learning model</span> to find movies with similar genres to the one selected. The Streamlit App is available <a href="https://share.streamlit.io/alema86/movie_recommandation/main/Streamlit/streamlit_appVersion_finale.py" target="_blank">here</a>.
+            We started to clean then analyze the database using Python, Pandas and Plotly then I built the app with a Python library named Streamlit. Based on the massive IMDb database I trained a KNN Machine Learning model to find movies with similar genres to the one selected. The Streamlit App is available <a href="https://share.streamlit.io/alema86/movie_recommandation/main/Streamlit/streamlit_appVersion_finale.py" target="_blank">here</a>.
         </p>
     </div>
 
