--- a/tableau_project.html
+++ b/tableau_project.html
@@ -33,9 +33,9 @@
             Tech stack: <span class="highlightme">SQL</span>, <span class="highlightme">Tableau Software</span>
             <br><br>
             This was my very first Data project done a week after starting my <a href="https://www.wildcodeschool.com/en-GB/courses/data-analysis-data-analytics-course-full-time" target="_blank">Data Analyst Training</a>.
-            I used MySQL Workbench to write 4 <span class="highlightme">SQL</span> queries.
+            I used MySQL Workbench to write 4 SQL queries.
             <br><br>
-            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on <span class="highlightme">Tableau Software</span>. The <span class="highlightme">dashboard</span> is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir" target="_blank">here</a>. The excentric art style was part of our story telling.
+            The final result was a 10 minutes presentation to our class where we showed the dashboard I made on Tableau Software. The dashboard is available <a href="https://public.tableau.com/app/profile/b.renger.queune/viz/Book10_16329876274240/Vladimir" target="_blank">here</a>. The excentric art style was part of our story telling.
         </p>
 
 
