--- a/testing.html
+++ b/testing.html
@@ -78,10 +78,12 @@
             I will start a 5 months Data Engineer training at Jedha Bootcamp in March.
         </p>
 
+        
 
     </div>
-
 </div>
+<img src="images/profile.png" alt="profile photo" class="center">
+
 <p id="my_projects"></p>
 
 
