--- a/bloc-4.html
+++ b/bloc-4.html
@@ -32,7 +32,7 @@
             <br>
             Tech stack: <span class="highlightme">Python</span>, <span class="highlightme">Plotly</span>, <span class="highlightme">Tensorflow</span>, <span class="highlightme">Spacy</span>, <span class="highlightme">NLP</span>
             <br><br>
-            After cleaning my text data by using Natural Language Processing</span> methods, I used Tensorflow to make a Deep Learning model in order to predict if a tweet is about a disaster or not. This is a <span class="highlightme">Kaggle competition</span> available <a href="https://www.kaggle.com/competitions/nlp-getting-started" target="_blank">here</a>.
+            After cleaning my text data by using Natural Language Processing methods, I used Tensorflow to make a Deep Learning model in order to predict if a tweet is about a disaster or not. This is a <span class="highlightme">Kaggle competition</span> available <a href="https://www.kaggle.com/competitions/nlp-getting-started" target="_blank">here</a>.
             <br><br>
             <!-- You can see a video of my presentation <a href="https://share.vidyard.com/watch/PdwuP11mGQWkX94ehwpF7R?" target="_blank">here</a>. -->
             
