--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 </div>
-
+<img src="images/profile.png" alt="profile photo" class="center">
 <!--Presentation div-->
 <!--Presentation div-->
 <!--Presentation div-->
