--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!--Presentation div-->
 <!--Presentation div-->
 
-
+<p id="my_projects"></p>
 <!--Project area div-->
 {% include projects_area.html %}
 <!--Project area div-->
