--- a/testing.html
+++ b/testing.html
@@ -48,7 +48,7 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 <!--Navigation Bar-->
-
+3000
 <body>
 
 
@@ -82,7 +82,21 @@
 
 <p id="my_projects"></p>
 
-
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="2560" height="560" preserveAspectRatio="none" viewBox="0 0 2560 560">
+    <g mask="url(&quot;#SvgjsMask1034&quot;)" fill="none">
+        <rect width="2560" height="560" x="0" y="0" fill="url(#SvgjsLinearGradient1035)"></rect>
+        <path d="M 0,551 C 170.8,490.4 512.4,297.2 854,248 C 1195.6,198.8 1366.8,344.6 1708,305 C 2049.2,265.4 2389.6,101 2560,50L2560 560L0 560z" fill="#2264ab"></path>
+    </g>
+    <defs>
+        <mask id="SvgjsMask1034">
+            <rect width="2560" height="560" fill="#ffffff"></rect>
+        </mask>
+        <linearGradient x1="19.53%" y1="-89.29%" x2="80.47%" y2="189.29%" gradientUnits="userSpaceOnUse" id="SvgjsLinearGradient1035">
+            <stop stop-color="#0e2a47" offset="0"></stop>
+            <stop stop-color="#00459e" offset="1"></stop>
+        </linearGradient>
+    </defs>
+</svg>
 
 <!--Presentation div-->
 <!--Presentation div-->
