--- a/testing.html
+++ b/testing.html
@@ -48,7 +48,6 @@
 <!--Navigation Bar-->
 <!--Navigation Bar-->
 <!--Navigation Bar-->
-3000
 <body>
 
 
@@ -61,7 +60,7 @@
 <!--Presentation div-->
 <!--Presentation div-->
 <!--Presentation div-->
-
+<svg width="100%" height="100%" id="svg" viewBox="0 0 1440 700" xmlns="http://www.w3.org/2000/svg" class="presentation_svg"><defs><linearGradient id="gradient" x1="92%" y1="23%" x2="8%" y2="77%"><stop offset="5%" stop-color="#5f80e8ff"></stop><stop offset="95%" stop-color="#6441a5ff"></stop></linearGradient></defs><path d="M 0,700 C 0,700 0,350 0,350 C 112.66666666666663,280.26666666666665 225.33333333333326,210.53333333333333 407,227 C 588.6666666666667,243.46666666666667 839.3333333333335,346.1333333333333 1023,381 C 1206.6666666666665,415.8666666666667 1323.3333333333333,382.93333333333334 1440,350 C 1440,350 1440,700 1440,700 Z" stroke="none" stroke-width="0" fill="url(#gradient)" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 350)"></path></svg>
 
 
 <div class="presentation_area">
@@ -78,25 +77,12 @@
 
     </div>
 </div>
-<img src="images/profile.png" alt="profile photo" class="center">
+<!-- <img src="images/profile.png" alt="profile photo" class="center"> -->
 
 <p id="my_projects"></p>
 
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="2560" height="560" preserveAspectRatio="none" viewBox="0 0 2560 560">
-    <g mask="url(&quot;#SvgjsMask1034&quot;)" fill="none">
-        <rect width="2560" height="560" x="0" y="0" fill="url(#SvgjsLinearGradient1035)"></rect>
-        <path d="M 0,551 C 170.8,490.4 512.4,297.2 854,248 C 1195.6,198.8 1366.8,344.6 1708,305 C 2049.2,265.4 2389.6,101 2560,50L2560 560L0 560z" fill="#2264ab"></path>
-    </g>
-    <defs>
-        <mask id="SvgjsMask1034">
-            <rect width="2560" height="560" fill="#ffffff"></rect>
-        </mask>
-        <linearGradient x1="19.53%" y1="-89.29%" x2="80.47%" y2="189.29%" gradientUnits="userSpaceOnUse" id="SvgjsLinearGradient1035">
-            <stop stop-color="#0e2a47" offset="0"></stop>
-            <stop stop-color="#00459e" offset="1"></stop>
-        </linearGradient>
-    </defs>
-</svg>
+
+
 
 <!--Presentation div-->
 <!--Presentation div-->
